# Intentia-Amoris

./: .env.example  .gitattributes  .gitignore  Dockerfile  GNUmakefile  MANIFEST.sha256.json  Makefile  README.md  audit_verdict.md  claim_matrix.csv  docker-compose.yml  pyproject.toml  repo_genome.json  risk_lattice.md  verification_report.md
contracts/: CONTINUATION_CONSENT_TEMPLATE.json  FORMAL_AXIOMS.json  INTENTIA_VALUE_CONTRACT.json  OMEGA_ECONOMIC_VALUE_CONTRACT.json  OMEGA_VALUE_CONTRACT.json  PAROUSIA_OMEGA_VALUE_CONTRACT_V6.json  RIOS_TARGET_GATES_2026.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_V8.md  CLAIM_BOUNDARY_V4.md  DATA_INTEGRATION.md  ECONOMIC_VALUE_SYSTEM_V5.md  ENGINEERING_REPORT.md  ETERNITY_GATE.md  ETERNITY_ROADMAP.md  EXECUTION_PLAN.md  FALSIFIABLE_RESEARCH_PROGRAM_V6.md  FIRST_PRINCIPLES_V4.md  FORMAL_SPECIFICATION.md  INTEGRATION_DECISION_LOG_V4.md  INTENTIA_AMORIS_MANIFEST.md  INTENTIA_AMORIS_OS_V2026_4_EXECUTION_STATE.md  MOBILE_TELEMETRY.md  OMEGA_ARCHITECTURE.md  OMEGA_V5_PARADIGM.md  OPERATING_MANUAL.md  OPERATIONS.md  PAROUSIA_OMEGA_V6_MANIFEST.md  PAROUSIA_PARADIGM.md  PRIVACY.md  PRODUCTION_ROADMAP.md  PRODUCT_SPEC.md  RELEASE_GATE.md  REPO_TOPOLOGY_V4.md  RESEARCH_PROGRAM.md  SAFETY_CONSENT.md  SECURITY_MODEL.md  VALUATION_ENGINEERING_V6.md  VALUE_FUNCTION.md  VALUE_FUNCTIONS_V4.md  VISUAL_IDENTITY.md
infra/: pgvector_schema.sql
scripts/: falsification_report.py  import_graph_check.py  import_telegram_to_db.py  omega_v6_report.py  smoke.py  value_aris_2026.py  verify_all.py  verify_all.sh
tests/: test_chunking.py  test_consent.py  (+26 more)
(+87 files in other folders)
