[project]
name = "intentia-amoris"
version = "1.0.0"
description = "Intentia Amoris — premium cognitive core for living love, consent-first memory, telemetry, inference and value functions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.18,<4",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy>=2.0,<3",
    "asyncpg>=0.30,<1",
    "aiosqlite>=0.20,<1",
    "python-dotenv>=1.0,<2",
    "python-multipart>=0.0.20,<1",
    "beautifulsoup4>=4.12,<5",
    "typer>=0.15,<1",
    "rich>=13.9,<14",
    "numpy>=2.1,<3",
    "httpx>=0.28,<1",
    "orjson>=3.10,<4",
    "openai>=1.59,<2",
    "cryptography>=44,<46",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
]

[project.scripts]
intentia-report = "intentia_amoris.research.dialogue_miner:main"
intentia-smoke = "intentia_amoris.kernel.omega_smoke:main"
intentia-value = "intentia_amoris.kernel.value_core:main"
intentia-product-audit = "intentia_amoris.quality.product_audit:main"
intentia-security-audit = "intentia_amoris.quality.security_audit:main"
intentia-api = "intentia_amoris.api:run"
intentia-bot = "intentia_amoris.telegram_bot:main"


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
